--- a/index.html
+++ b/index.html
@@ -1,14 +1,470 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body> <h1>
-  привіт
-</h1>
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!--------HEADER-------->
+    <header class="header">
+      <div class="container main-nav">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link header-link studio-current " href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link header-link  " href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link header-link " href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+            </li>
+            <li class="contacts-item">
+              <a href="tel:+110001111111" class="contacts-link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+        <button class="mobile-btn" type="button">+
+        </button>
+      </div>
+    </header>
+    <main>
+      <!--------HERO-------->
+      <!-- <section class="hero">
+        <div class="container hero-content">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="main-btn btn" data-modal-open>Order Service</button>
+        </div>
+      </section>
+      <section class="advatages-list">
+        <div class="container">
+          <h2 hidden>advantages</h2>
+          <ul class="list advantages">
+            <li class="advantages-item">
+                <div class="advantages-link">
+                  <svg class="advantages-link-item">
+                    <use href="./images/sprite.svg#icon-antenna"></use>
+                  </svg>
+                </div>
+              <h3 class="decsr advantages-descr">Strategy</h3>
+              <p>
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <div class="advantages-link">
+                <svg class="advantages-link-item">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
+              <h3 class="decsr advantages-descr">Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <div class="advantages-link">
+                <svg class="advantages-link-item">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="decsr advantages-descr">Diligence</h3>
+              <p>
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <div class="advantages-link">
+                <svg class="advantages-link-item">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="decsr advantages-descr">Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="img-list">
+        <div class="container">
+          <h2 class="title example-title">What are we doing</h2>
+          <ul class="example-pictures list">
+            <li class="example-pictures-list">
+              <img src="./images/imac.jpg" alt="imac" width="360" />
+            </li>
+            <li class="example-pictures-list">
+              <img src="./images/iphone.jpg" alt="iphone" width="360" />
+            </li>
+            <li class="example-pictures-list">
+              <img src="./images/maciphone.jpg" alt="maciphone" width="360" />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="team">
+        <div class="container">
+          <h2 class="title team-title">Our Team</h2>
+          <ul class="list team-list">
+            <li class="team-item">
+              <img src="./images/man1.jpg" alt="man1" width="264" />
+              <div class="team-worker">
+              <h3 class="decsr team-descr">Mark Guerrero</h3>
+              <p class="sub-descr">Product Designer</p>
+              <ul class="social-list list">
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+          </div>
+        </li>
+            <li class="team-item">
+              <img src="./images/man2.jpg" alt="man2" width="264" />
+              <div class="team-worker">
+              <h3 class="decsr team-descr">Tom Ford</h3>
+              <p class="sub-descr">Frontend Developer</p>
+              <ul class="social-list list">
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+          </div>
+        </li>
+            <li class="team-item">
+              <img src="./images/girl.jpg" alt="girl" width="264" />
+              <div class="team-worker">
+              <h3 class="decsr team-descr">Camila Garcia</h3>
+              <p class="sub-descr">Marketing</p>
+              <ul class="social-list list">
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+            <li class="team-item">
+              <img src="./images/man3.jpg" alt="man3" width="264" />
+              <div class="team-worker">
+              <h3 class="decsr team-descr">Daniel Wilson</h3>
+              <p class="sub-descr">UI Designer</p>
+              <ul class="social-list list">
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="social-list-link">
+                    <svg class="social-list-icon-team social-list-icon">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="customers ">
+        <div class="container">
+          <h2 class="customers-descr">Customers</h2>
+          <ul class="list customers-list">
+            <li class="customers-link">
+              <a href="" class="customers-item">
+                <svg class="svg-logo" width="104px" height="56px">
+                  <use href="./images/sprite.svg#icon-logo6"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a href="" class="customers-item">
+                <svg class="svg-logo" width="104px" height="56px">
+                  <use href="./images/sprite.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a href="" class="customers-item">
+                <svg class="svg-logo" width="104px" height="56px">
+                  <use href="./images/sprite.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a href="" class="customers-item">
+                <svg class="svg-logo" width="104px" height="56px">
+                  <use href="./images/sprite.svg#icon-logo3" class="customers-item-link"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a href="" class="customers-item">
+                <svg class="svg-logo" width="104px" height="56px">
+                  <use href="./images/sprite.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a href="" class="customers-item">
+                <svg class="svg-logo" width="104px" height="56px">
+                  <use href="./images/sprite.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section> -->
+    </main>
+    <!--------FOOTER-------->
+    <!-- <footer class="footer">
+      <div class="container footer-wraper">
+        <div class="footer-info">
+          <a href="./index.html" class="logo footer-logo"><span>Web</span>Studio</a>
+          <p class="footer-descr">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="soc-media">
+          <h2 class="footer-title">Social media</h2>
+        <ul class="footer-social-list list">
+          <li>
+            <a href="" class="footer-social-list-link">
+              <svg class="social-list-icon-footer social-list-icon">
+                <use href="./images/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="footer-social-list-link">
+              <svg class="social-list-icon-footer social-list-icon">
+                <use href="./images/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="footer-social-list-link">
+              <svg class="social-list-icon-footer social-list-icon" >
+                <use href="./images/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="footer-social-list-link" >
+              <svg class="social-list-icon-footer social-list-icon">
+                <use href="./images/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+      </ul>
+    </div>
+    <form class="subscribe-form">
+      <label for="user-message" class="subscribe-title">Subscribe</label>
+      <div class="subscribe-field">
+        <input 
+        id="user-message"
+        class="subscribe-input" 
+        type="email"
+        name="user-email"
+        placeholder="E-mail"
+        required>
+        <button class="subscribe-btn btn" type="submit">
+          Subscribe
+          <svg class="subscribe-icon">
+            <use href="./images/sprite.svg#icon-telegram"></use>
+          </svg>
+        </button>
+      </div>
+    </form>
+  </div>
+</footer> -->
+
+
+<div class="backdrop is-hidden" data-modal>
+  <div class="modal">
+    <button type="button" class="modal-close-btn" data-modal-close>
+      <svg class="modal-close-btn-icon" width="8" height="8" >
+        <use  href="./images/sprite.svg#icon-close-modal"></use>
+      </svg>
+    </button>
+    <form class="modal-form">
+      <p class="form-descr">Leave your contacts and we will call you back</p>
+      <label class="modal-form-field">
+        <span class="modal-form-input-descr">Name</span>
+        <span class="modal-form-input-wrapper">
+          <input
+          name="user_name"
+          type="text" 
+          class="modal-form-input"
+          required 
+          pattern="^[a-zA-Zа-яА-я]+"
+          minlength="2">
+            <svg class="modal-form-input-icon"  width="18" height="18">
+              <use href="./images/sprite.svg#icon-name"></use>
+            </svg>
+         </span>
+      </label>
+      <label class="modal-form-field">
+        <span class="modal-form-input-descr">Phone</span>
+        <span class="modal-form-input-wrapper">
+          <input 
+          name="user_phone"
+          type="tel" 
+          class="modal-form-input" 
+          required
+          pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+          title="xxx-xxx-xx-xx">
+            <svg class="modal-form-input-icon" width="18" height="24">
+              <use href="./images/sprite.svg#icon-telephone"></use>
+            </svg>
+        </span>
+      </label>
+      <label class="modal-form-field">
+        <span class="modal-form-input-descr">Email</span>
+        <span class="modal-form-input-wrapper">
+          <input 
+          name="user_email" 
+          type="email" 
+          class="modal-form-input" 
+          required>
+            <svg class="modal-form-input-icon" width="18" height="24">
+              <use href="./images/sprite.svg#icon-email"></use>
+            </svg>
+        </span>
+      </label>
+      <label class="modal-form-field-textarea">
+        <span class="modal-form-input-descr">Comment</span>
+        <textarea
+        name="user_message" 
+        class="modal-form-message" 
+        placeholder="Text input"></textarea>
+      </label>
+      <input id="user-policy" name="user_policy" type="checkbox" class="modal-form-check visually-hidden ">
+      <label for="user-policy" class="modal-form-chek-desc">
+        I accept the terms and conditions of the&nbsp;<a href="">Privacy Policy</a>
+      </label>
+      <button type="submit" class="modal-form-submit btn">Send</button>
+    </form>
+  </div>
+</div>
+<script src="./js/modal.js"></script>
 </body>
 </html>
