--- a/index.html
+++ b/index.html
@@ -45,8 +45,74 @@
             </li>
           </ul>
         </address>
-        <button class="mobile-btn" type="button">+
+        <button class="mobile-btn js-open-menu " aria-expanded="false" type="button">
+          <svg class="menu-btn-icon" width="32" height="22">
+            <use href="./images/sprite.svg#icon-hamburger"></use>
+          </svg>
         </button>
+      </div>
+
+      <div class="backdrop mob-menu is-open js-menu-container" >
+        <div class="container mobile-container">
+          </div>
+          <div>
+            <button type="button" class="modal-close-btn js-close-menu" data-modal-close>
+              <svg class="modal-close-btn-icon" width="8" height="8" >
+                <use  href="./images/sprite.svg#icon-close-modal"></use>
+              </svg>
+            </button>
+            <ul class="mob-menu-list">
+              <li class="mob-menu-list-item">
+                <a class="mob-menu-item header-link nav-link" href="./index.html">Studio</a>
+              </li>
+              <li class="mob-menu-list-item">
+                <a class="mob-menu-item header-link nav-link" href="./portfolio.html">Portfolio</a>
+              </li>
+              <li class="mob-menu-list-item">
+                <a class="mob-menu-item header-link nav-link "href="">Contacts</a>
+              </li>
+            </ul>
+
+            <ul class="mob-menu-contacts">
+              <li  class="contacts-item">
+                <a href="mailto:info@devstudio.com"  class="contacts-link contacts-list mob-contacts">info@devstudio.com</a>
+              </li>
+              <li class="contacts-item">
+                <a href="tel:+110001111111" class="contacts-link  mob-contacts">+11 (000) 111-11-11</a>
+              </li>
+            </ul>
+            <ul class="mob-social-list list">
+              <li>
+                <a href="" class="social-list-link">
+                  <svg class="social-list-icon-team social-list-icon">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="social-list-link">
+                  <svg class="social-list-icon-team social-list-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="social-list-link">
+                  <svg class="social-list-icon-team social-list-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="social-list-link">
+                  <svg class="social-list-icon-team social-list-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -466,5 +532,6 @@
   </div>
 </div>
 <script src="./js/modal.js"></script>
+<script src="./js/mobile.js"></script>
 </body>
 </html>
