--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -63,22 +65,22 @@
             </button>
             <ul class="mob-menu-list">
               <li class="mob-menu-list-item">
-                <a class="mob-menu-item header-link nav-link" href="./index.html">Studio</a>
+                <a class="mob-menu-item mob-header-link nav-link is-active" href="./index.html">Studio</a>
               </li>
               <li class="mob-menu-list-item">
-                <a class="mob-menu-item header-link nav-link" href="./portfolio.html">Portfolio</a>
+                <a class="mob-menu-item mob-header-link nav-link" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="mob-menu-list-item">
-                <a class="mob-menu-item header-link nav-link "href="">Contacts</a>
+                <a class="mob-menu-item mob-header-link nav-link "href="">Contacts</a>
               </li>
             </ul>
 
             <ul class="mob-menu-contacts">
-              <li  class="contacts-item">
-                <a href="mailto:info@devstudio.com"  class="contacts-link contacts-list mob-contacts">info@devstudio.com</a>
-              </li>
               <li class="contacts-item">
-                <a href="tel:+110001111111" class="contacts-link  mob-contacts">+11 (000) 111-11-11</a>
+                <a href="tel:+110001111111" class="mob-contacts is-active">+11 (000) 111-11-11</a>
+              </li>
+              <li  class="contacts-item">
+                <a href="mailto:info@devstudio.com"  class="mob-contacts">info@devstudio.com</a>
               </li>
             </ul>
             <ul class="mob-social-list list">
@@ -117,13 +119,14 @@
     </header>
     <main>
       <!--------HERO-------->
-      <!-- <section class="hero">
+        <section class="hero">
         <div class="container hero-content">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-btn btn" data-modal-open>Order Service</button>
         </div>
       </section>
-      <section class="advatages-list">
+
+       <section class="advatages-list">
         <div class="container">
           <h2 hidden>advantages</h2>
           <ul class="list advantages">
@@ -349,6 +352,7 @@
         </ul>
       </div>
     </section>
+
     <section class="customers ">
         <div class="container">
           <h2 class="customers-descr">Customers</h2>
@@ -397,8 +401,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-    </main>
+      </section> 
+        </main> 
     <!--------FOOTER-------->
     <!-- <footer class="footer">
       <div class="container footer-wraper">
