--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!--------HEADER-------->
-    <header class="header">
+    <header class="header container">
       <div class=" main-nav">
         <nav class="header-nav">
           <a href="./index.html" class="logo"><span>Web</span>Studio</a>
@@ -126,7 +126,7 @@
     <main>
       <!--------HERO-------->
 
-        <section class="hero">
+        <section class="hero ">
         <div class="container hero-content">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-btn btn" data-modal-open>Order Service</button>
