--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!--------HEADER-------->
-    <header class="header">
+    <header class="header container">
       <div class=" main-nav">
         <nav class="header-nav">
           <a href="./index.html" class="logo"><span>Web</span>Studio</a>
