--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
       </section>
 
-<section class="advatages-list">
+       <section class="advatages-list">
         <div class="container">
           <h2 hidden>advantages</h2>
           <ul class="list advantages">
@@ -416,7 +416,7 @@
 
 
         </main> 
- <!-- ------FOOTER----- -->
+    <!-- ------FOOTER------ -->
     <footer class="footer">
       <div class="container footer-wraper">
         <div class="footer-info">
