--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     </section>
 
     <section class="customers ">
-        <div class="container">
+        <div class="container customer-container">
           <h2 class="customers-descr">Customers</h2>
           <ul class="list customers-list">
             <li class="customers-link">
